--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ data/sound_files/*
 !data/raw_hydrological_data/02a_raw_data.csv
 
 # But keep the directory itself by not ignoring .gitkeep
-data/sound_files/.gitkeep
+#data/sound_files/.gitkeep
 
 # Ignore all files in the temp directory
 temp/*
